--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Customize your main colors in :root variables */
 :root {
-  --main-background-color: #343A50;
+  --main-background-color: #000000;
   --card-background-color: #51576D;
   --card-background-lighter-color: #7A7F92;
   --main-text-color:#F7F6F4;
@@ -12,7 +12,7 @@ body{
   /*background: url("img/background.png");
   background-size: cover;*/
 
-  font-family: 'Patrick Hand', cursive;
+  font-family: 'Roboto';
   font-size: 1.1em;
 }
 
